vlib/v/parser/tests/struct_field_unknown_module_c.vv
import term.ui

struct Inter {
	code term.ui.KeyCode
}
